add_subdirectory(${MW05_RECOMP_TOOLS_ROOT}/bc_diff)
add_subdirectory(${MW05_RECOMP_TOOLS_ROOT}/file_to_c)
add_subdirectory(${MW05_RECOMP_TOOLS_ROOT}/fshasher)
add_subdirectory(${MW05_RECOMP_TOOLS_ROOT}/x_decompress)
add_subdirectory(${MW05_RECOMP_TOOLS_ROOT}/XenonRecomp)
add_subdirectory(${MW05_RECOMP_TOOLS_ROOT}/XenosRecomp)
